Added Facebook Authentication, Profile UI and Connections UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,11 @@
     <string name="done">Done</string>
     <string name="messages_to">Messages to</string>
     <string name="title_activity_home2">HomeActivity2</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_connections">Connections</string>
+
+    <string name="facebook_app_id">329229717648335</string>
+    <string name="fb_login_protocol_scheme">fb329229717648335</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
